--- a/index.html
+++ b/index.html
@@ -13,7 +13,20 @@
     <div class="container-page">
         <!-- Header -->
         <header>
-
+            <nav class="navbar navbar-expand bg-body-tertiary">
+                <div class="container-fluid">
+                  <a class="navbar-brand" href="#"><img src="img/mobile-logo.png" alt="mobile-logo"></a>
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>
+                  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <form class="d-flex w-100" role="search">
+                        <input class="form-control me-2 search-icon" type="search" placeholder=" &#xf002;  Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                        <button class="btn" type="submit"><i class="fa-solid fa-bell"></i></button>
+                    </form>
+                  </div>
+                </div>
+              </nav>
         </header>
         <!-- Main -->
         <main>
