sidebar background and hover effect

--- a/index.html
+++ b/index.html
@@ -35,8 +35,40 @@
         <!-- Main -->
         <main>
             <div class="container-side-main d-flex">
-                <div class="sidebar">
-    
+                <!-- Sidebar -->
+                <div class="side-bar d-flex flex-column justify-content-between">
+                    <div class="container-sm mt-3 d-flex justify-content-center">
+                        <div class="row flex-column">
+                            <div class="hover-effect">
+                                <div class="col d-flex mb-3">
+                                    <i class="fa-solid fa-house"></i>
+                                    <h2 class="d-none d-lg-block title">Home</h2>
+                                </div>
+                            </div>
+                            <div class="hover-effect">
+                                <div class="col d-flex mb-3">
+                                    <i class="fa-solid fa-chart-simple"></i>
+                                    <h2 class="d-none d-lg-block title">Stats</h2>
+                                </div>
+                            </div>
+                            <div class="hover-effect">
+                                <div class="col d-flex mb-3">
+                                    <i class="fa-solid fa-signal"></i>
+                                    <h2 class="d-none d-lg-block title">Signal</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container-sm mt-3 d-flex justify-content-center">
+                        <div class="row flex-column">
+                            <div class="hover-effect">
+                                <div class="col d-flex mb-3">
+                                    <i class="fa-solid fa-gear"></i>
+                                    <h2 class="d-none d-lg-block title">Admin</h2>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="main-content">
     
