container menu layout and filled

--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                                 <i class="fa-solid fa-bell"></i>
                             </button>
                             <ul class="dropdown-menu dropdown-menu-end">
-                              <li><button class="dropdown-item" type="button">Action</button></li>
-                              <li><button class="dropdown-item" type="button">Another action</button></li>
-                              <li><button class="dropdown-item" type="button">Something else here</button></li>
+                              <li><button class="dropdown-item" type="button">Profilo</button></li>
+                              <li><button class="dropdown-item" type="button">Fatturazione</button></li>
+                              <li><button class="dropdown-item" type="button">Logout</button></li>
                             </ul>
                           </div>
                     </form>
@@ -80,7 +80,36 @@
                     </div>
                 </div>
                 <div class="main-content">
+                    <div class="container-menu">
+                        <!-- Main Menu -->
+                        <div class="row row-cols-md-3 flex-column flex-md-row mt-3 justify-content-center align-items-center ps-3">
+                            <div class="col mb-4 ml-3">
+                                <div class="col d-flex align-items-center">
+                                    <h4 class="pe-3">Boolean</h4>
+                                    <button type="button" class="btn btn-dark-blue">Piano Blaze</button>
+                                </div>
+                                <div class="col d-flex align-items-center">
+                                    <button type="button" class="btn btn-dark-blue">3 app</button>
+                                    <i class="fa-solid fa-angles-right px-2"></i>
+                                    <button type="button" class="btn btn-dark-blue">+</button>
+                                </div>
+                            </div>
+                            <div class="col align-items-center mb-4">
+                                <h4 class="pe-3">Studenti online negli ultimi 30 minuti</h4>
+                                <div class="col">
+                                    <h3>125</h3>
+                                </div>
+                            </div>
+                            <div class="col d-flex order-first order-md-last align-items-center mb-4">
+                                <h4 class="pe-3">Nuovo Studente</h4>
+                                <button type="button" class="btn btn-blue"><i class="fa-solid fa-plus"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Main Content -->
+                    <div class="container-content">
 
+                    </div>
                 </div>
             </div>
         </main>
