--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                     <div class="container-sm mt-3 d-flex justify-content-center">
                         <div class="row flex-column">
                             <div class="hover-effect">
-                                <div class="col d-flex mb-3">
+                                <div class="col d-flex mb-4">
                                     <i class="fa-solid fa-gear"></i>
                                     <h2 class="d-none d-lg-block title">Admin</h2>
                                 </div>
@@ -82,25 +82,28 @@
                 <div class="main-content">
                     <div class="container-menu">
                         <!-- Main Menu -->
-                        <div class="row row-cols-md-3 flex-column flex-md-row mt-3 justify-content-center align-items-center ps-3">
-                            <div class="col mb-4 ml-3">
+                        <div class="row row-cols-md-3 flex-column flex-md-row justify-content-center align-items-center ps-3">
+                            <div class="col col-lg-6 mb-4 ml-3 mt-3">
                                 <div class="col d-flex align-items-center">
-                                    <h4 class="pe-3">Boolean</h4>
+                                    <h2 class="pe-3">Boolean</h2>
                                     <button type="button" class="btn btn-dark-blue">Piano Blaze</button>
                                 </div>
                                 <div class="col d-flex align-items-center">
                                     <button type="button" class="btn btn-dark-blue">3 app</button>
                                     <i class="fa-solid fa-angles-right px-2"></i>
-                                    <button type="button" class="btn btn-dark-blue">+</button>
+                                    <button type="button" class="btn btn-dark-blue d-lg-none">+</button>
+                                    <button type="button" class="btn btn-dark-blue d-none d-lg-block">Boolean Mobile App</button>
+                                    <button type="button" class="btn btn-dark-blue d-none d-lg-block">Boolean Web App</button>
+                                    <button type="button" class="btn btn-dark-blue d-none d-lg-block">Boolean Blog App</button>
                                 </div>
                             </div>
-                            <div class="col align-items-center mb-4">
+                            <div class="col col-lg-3 align-items-center mb-4 mt-3">
                                 <h4 class="pe-3">Studenti online negli ultimi 30 minuti</h4>
                                 <div class="col">
                                     <h3>125</h3>
                                 </div>
                             </div>
-                            <div class="col d-flex order-first order-md-last align-items-center mb-4">
+                            <div class="col col-lg-3 d-flex order-first order-md-last align-items-center mb-4 mt-3 justify-content-md-center">
                                 <h4 class="pe-3">Nuovo Studente</h4>
                                 <button type="button" class="btn btn-blue"><i class="fa-solid fa-plus"></i></button>
                             </div>
@@ -108,7 +111,103 @@
                     </div>
                     <!-- Main Content -->
                     <div class="container-content">
+                        <div class="row">
+                            <div class="col">
+                                <!-- Card Classes -->
+                                <div class="card">
+                                    <div class="card-header">
+                                     <strong>Prossime Classi</strong>
+                                    </div>
+                                    <div class="card-body">
+                                        <table class="table">
+                                            <thead>
+                                              <tr>
+                                                <th scope="col">Nome</th>
+                                                <th scope="col">Data Inizio</th>
+                                                <th scope="col">ROI</th>
+                                                <th scope="col">Stato</th>
+                                                <th scope="col">Azioni</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <th scope="row">1</th>
+                                                <td>Mark</td>
+                                                <td>Otto</td>
+                                                <td>@mdo</td>
+                                                <td>@mdo</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">2</th>
+                                                <td>Jacob</td>
+                                                <td>Thornton</td>
+                                                <td>@fat</td>
+                                                <td>@mdo</td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row">3</th>
+                                                <td colspan="2">Larry the Bird</td>
+                                                <td>@twitter</td>
+                                                <td>@mdo</td>
+                                              </tr>
+                                            </tbody>
+                                          </table>
+                                    </div>
+                                  </div>
+                                  <!-- F.A.Q Card -->
+                                <div class="card">
+                                    <div class="card-header">
+                                        <strong>F.A.Q.</strong>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="accordion accordion-flush">
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header">
+                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                  Come aggiungere un nuovo studente?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  <strong>Clicca sul pulsante nuovo studente</strong>
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                  Come posso accedere alle informazioni del mio account?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  <strong>Clicca sul pulsante admin</strong>
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                  Posso usare questa dashboard da mobile?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  <strong>La dashboard è disponibile anche in versione mobile.</strong>
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </div>
+                                  </div>
+                            </div>
+                            <div class="col">
+                                <!-- Card To Do-->
 
+                                <!-- Card Analytcs -->
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
