fixed responsive layout menu main

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="container-side-main d-flex">
                 <!-- Sidebar -->
                 <div class="side-bar d-flex flex-column justify-content-between">
-                    <div class="container-sm mt-3 d-flex justify-content-center">
+                    <div class="container-sm mt-5 d-flex justify-content-center">
                         <div class="row flex-column">
                             <div class="hover-effect">
                                 <div class="col d-flex mb-3">
@@ -68,10 +68,10 @@
                             </div>
                         </div>
                     </div>
-                    <div class="container-sm mt-3 d-flex justify-content-center">
+                    <div class="container-sm d-flex justify-content-center">
                         <div class="row flex-column">
                             <div class="hover-effect">
-                                <div class="col d-flex mb-4">
+                                <div class="col d-flex mb-5 py-5">
                                     <i class="fa-solid fa-gear"></i>
                                     <h2 class="d-none d-lg-block title">Admin</h2>
                                 </div>
@@ -82,8 +82,8 @@
                 <div class="main-content">
                     <div class="container-menu">
                         <!-- Main Menu -->
-                        <div class="row row-cols-md-3 flex-column flex-md-row justify-content-center align-items-center ps-3">
-                            <div class="col col-lg-6 mb-4 ml-3 mt-3">
+                        <div class="row row-cols-md-3 flex-column flex-md-row justify-content-center align-items-center ps-3 ps-lg-2">
+                            <div class="col col-lg-6 mb-4 mt-3">
                                 <div class="col d-flex align-items-center">
                                     <h2 class="pe-3">Boolean</h2>
                                     <button type="button" class="btn btn-dark-blue">Piano Blaze</button>
@@ -204,7 +204,9 @@
                             <div class="col">
                                 <!-- Card To Do-->
 
+
                                 <!-- Card Analytcs -->
+
 
                             </div>
                         </div>
