fixed main layout

--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@
                     </div>
                     <!-- Main Content -->
                     <div class="container-content">
-                        <div class="row">
-                            <div class="col">
+                        <div class="row px-3 py-5">
+                            <div class="col-12 col-lg-8">
                                 <!-- Card Classes -->
-                                <div class="card">
+                                <div class="card mb-3">
                                     <div class="card-header">
                                      <strong>Prossime Classi</strong>
                                     </div>
@@ -131,31 +131,67 @@
                                             </thead>
                                             <tbody>
                                               <tr>
-                                                <th scope="row">1</th>
-                                                <td>Mark</td>
-                                                <td>Otto</td>
-                                                <td>@mdo</td>
-                                                <td>@mdo</td>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 75</th>
+                                                <td>15 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">2</th>
-                                                <td>Jacob</td>
-                                                <td>Thornton</td>
-                                                <td>@fat</td>
-                                                <td>@mdo</td>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 76</th>
+                                                <td>16 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
                                               </tr>
                                               <tr>
-                                                <th scope="row">3</th>
-                                                <td colspan="2">Larry the Bird</td>
-                                                <td>@twitter</td>
-                                                <td>@mdo</td>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 77</th>
+                                                <td>17 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-warning">Process</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 78</th>
+                                                <td>18 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 79</th>
+                                                <td>19 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-danger">Failed</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 80</th>
+                                                <td>20 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 81</th>
+                                                <td>21 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-danger">Failed</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                              </tr>
+                                              <tr>
+                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 82</th>
+                                                <td>22 Feb 2021</td>
+                                                <td>20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
                                               </tr>
                                             </tbody>
                                           </table>
                                     </div>
                                   </div>
                                   <!-- F.A.Q Card -->
-                                <div class="card">
+                                <div class="card mb-3">
                                     <div class="card-header">
                                         <strong>F.A.Q.</strong>
                                     </div>
@@ -201,13 +237,59 @@
                                     </div>
                                   </div>
                             </div>
-                            <div class="col">
+                            <div class="col mb-3">
                                 <!-- Card To Do-->
-
-
+                                <div class="card mb-3">
+                                    <div class="card-header">
+                                     <strong>Todo</strong>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="card" style="width: 100%;">
+                                            <ul class="list-group list-group-flush">
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">Kickoff nuove classi</label>
+                                                </div>
+                                              </li>
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">Lezione su Bootstrap 5 in classe #75</label>
+                                                </div>
+                                              </li>
+                                              <li class="list-group-item">
+                                                <div class="form-check">
+                                                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                    <label class="form-check-label" for="flexCheckDefault">Controllare username github studenti</label>
+                                                </div>
+                                              </li>
+                                            </ul>
+                                          </div>
+                                        </div>
+                                </div>
                                 <!-- Card Analytcs -->
-
-
+                                <div class="card mb-3">
+                                    <div class="card-body">
+                                        <div class="card" style="width: 100%;">
+                                            <div class="card" style="width: 100%;">
+                                                <img src="img/stats.jpeg" class="card-img-top" alt="Analytcs">
+                                                <div class="card-body">
+                                                  <h5 class="card-title">Utenti attivi</h5>
+                                                  <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
+                                                </div>
+                                                <ul class="list-group list-group-flush">
+                                                  <li class="list-group-item">Gennaio: 1200</li>
+                                                  <li class="list-group-item">Febbraio: 800</li>
+                                                  <li class="list-group-item">Marzo: 1500</li>
+                                                </ul>
+                                                <div class="card-body">
+                                                  <a href="#" class="card-link">Visualizza report approfondito</a>
+                                                </div>
+                                            </div> 
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
