fixed main layout

--- a/index.html
+++ b/index.html
@@ -111,8 +111,8 @@
                     </div>
                     <!-- Main Content -->
                     <div class="container-content">
-                        <div class="row px-3 py-5">
-                            <div class="col-12 col-lg-8">
+                        <div class="row px-3 py-3">
+                            <div class="col-12 col-lg-9">
                                 <!-- Card Classes -->
                                 <div class="card mb-3">
                                     <div class="card-header">
@@ -269,11 +269,11 @@
                                         </div>
                                 </div>
                                 <!-- Card Analytcs -->
-                                <div class="card mb-3">
+                                <div class="card">
                                     <div class="card-body">
                                         <div class="card" style="width: 100%;">
                                             <div class="card" style="width: 100%;">
-                                                <img src="img/stats.jpeg" class="card-img-top" alt="Analytcs">
+                                                <img src="img/stats.jpeg" class="card-img-top img-fluid" alt="Analytcs">
                                                 <div class="card-body">
                                                   <h5 class="card-title">Utenti attivi</h5>
                                                   <p class="card-text">Lista degli utenti attivi in piattaforma nell'ultimo mese</p>
