--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                                     </div>
                                   </div>
                             </div>
-                            <div class="col mb-3">
+                            <div class="col">
                                 <!-- Card To Do-->
                                 <div class="card mb-3">
                                     <div class="card-header">
