Fixed layout resolution 576px and 992px

--- a/index.html
+++ b/index.html
@@ -118,73 +118,129 @@
                                     <div class="card-header">
                                      <strong>Prossime Classi</strong>
                                     </div>
-                                    <div class="card-body">
+                                    <div class="card-body py-0">
                                         <table class="table">
                                             <thead>
                                               <tr>
                                                 <th scope="col">Nome</th>
-                                                <th scope="col">Data Inizio</th>
-                                                <th scope="col">ROI</th>
+                                                <th scope="col" class="d-none d-md-table-cell">Data Inizio</th>
+                                                <th scope="col" class="d-none d-md-table-cell">ROI</th>
                                                 <th scope="col">Stato</th>
                                                 <th scope="col">Azioni</th>
                                               </tr>
                                             </thead>
                                             <tbody>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 75</th>
-                                                <td>15 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 75</th>
+                                                <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-success">Done</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 76</th>
-                                                <td>16 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 76</th>
+                                                <td class="d-none d-md-table-cell">16 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-success">Done</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 77</th>
-                                                <td>17 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 77</th>
+                                                <td class="d-none d-md-table-cell">17 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-warning">Process</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 78</th>
-                                                <td>18 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 78</th>
+                                                <td class="d-none d-md-table-cell">18 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-success">Done</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 79</th>
-                                                <td>19 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 79</th>
+                                                <td class="d-none d-md-table-cell">19 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-danger">Failed</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 80</th>
-                                                <td>20 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 80</th>
+                                                <td class="d-none d-md-table-cell">20 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-success">Done</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 81</th>
-                                                <td>21 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 81</th>
+                                                <td class="d-none d-md-table-cell">21 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-danger">Failed</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                               <tr>
-                                                <th scope="row"><i class="fa-solid fa-code"></i>classe 82</th>
-                                                <td>22 Feb 2021</td>
-                                                <td>20%</td>
+                                                <th scope="row" class="d-flex align-items-center"><i class="fa-solid fa-code circle-background"></i>classe 82</th>
+                                                <td class="d-none d-md-table-cell">22 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
                                                 <td><span class="badge text-bg-success">Done</span></td>
-                                                <td><i class="fa-solid fa-pen"></i><i class="fa-solid fa-trash"></i></td>
+                                                <td class="d-flex">
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-pen"></i>
+                                                  </div>
+                                                  <div class="square-background">
+                                                    <i class="fa-solid fa-trash"></i>
+                                                  </div>
+                                                </td>
                                               </tr>
                                             </tbody>
                                           </table>
@@ -269,7 +325,7 @@
                                         </div>
                                 </div>
                                 <!-- Card Analytcs -->
-                                <div class="card">
+                                <div class="card mb-5">
                                     <div class="card-body">
                                         <div class="card" style="width: 100%;">
                                             <div class="card" style="width: 100%;">
